[UI] Fix an issue causing a scrollbar to appear in the main menu (#893)

--- a/app/javascript/src/styles/common/navigation.scss
+++ b/app/javascript/src/styles/common/navigation.scss
@@ -389,6 +389,7 @@ nav.navigation, html.nav-toggled nav.navigation {
       background: unset;
       height: unset;
       padding-left: 0.25rem;
+      overflow-y: unset;
 
       li a {
         border-bottom: 0;
@@ -401,6 +402,7 @@ nav.navigation, html.nav-toggled nav.navigation {
 
       padding: 0 0.25rem;
       border-radius: 0.25rem 0 0 0.25rem;
+      overflow-y: unset;
 
       overflow: hidden; // Silly fix for too many links
       z-index: 1; // above the avatar
